update PostVarify API and fix bug of PostProve API
