# docs/swagger.json
@@ -249,6 +249,15 @@
                                 "$ref": "#/definitions/selftype.ProvePackage"
                             }
                         }
+                    },
+                    {
+                        "description": "userName",
+                        "name": "userName",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 ],
                 "responses": {
@@ -319,7 +328,8 @@
                     }
                 },
                 "varifyURL": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "http://localhost:8080/verify"
                 }
             }
         },
